# moddable-mahjong

./: CMakeLists.txt  README.md
Resource/Lua/: test.lua
Resource/Lua/BodySpec/: shuntsu.lua  toitsu.lua
Resource/Lua/TenpaiSpec/: standardForm.lua
Resources/lua/: test.lua
Resources/lua/BodySpec/: shuntsu.lua  toitsu.lua
include/: Body.h  CandidateExtractor.h  Enumerator.h  FinalFormExtractor.h  Hai.h  HaiCandidates.h  LuaDataHolder.h  Player.h  TenpaiSpec.h
include/ROContainer/: ROSet.h  ROVector.h
include/sol/: config.hpp  sol.hpp
lua/: test.lua
src/: Body.cpp  Hai.cpp  HaiCandidates.cpp  LuaDataHolder.cpp  TenpaiSpec.cpp  main.cpp
